src/main/java/com/example/mstransactions/error/AccountNotFoundException.java
package com.example.mstransactions.error;

public class AccountNotFoundException extends Exception{
    public AccountNotFoundException(String id) {
        super("productId: " + id + " not found");
    }
}
